# ai_refac

./: .gitignore  .impeccable.md  Cargo.toml  README.md  RESEARCH_TASK.md  agents.md  debug_ra.rs  research_results_reloading.md  startup_log.txt
.agents/skills/coding/: SKILL.md
.agents/skills/default-tools/: SKILL.md
.agents/skills/doc-start/: SKILL.md
.agents/skills/naming-conventions/: SKILL.md
.agents/skills/refac-cli/: SKILL.md
.agents/skills/remote-helper/: SKILL.md
.agents/skills/skill-writer/: SKILL.md
.claude/: skills
Project_Manag/Docs/: Testing_and_Debugging.md  dev_guide.md  doc_Start.md  implementation_plan.md  integration_guide.md  walkthrough.md
Project_Manag/Live_Working/: findings.md  mcp_Tasks.md  open_Issues.md  task_TypeScript_Move_Safety.md  task_TypeScript_Project_Loading.md  task_TypeScript_Runner_Benchmark.md  tool_Research_Brief.md  tool_Research_Report.md
docs-site/: astro.config.mjs
scripts/: package-lock.json  package.json  python_refactor.py  test_headless.ts  ts_aliases.ts  ts_refactor.js  ts_refactor.ts
src/: cli.rs  lib.rs  main.rs
src/drivers/: dart.rs  go.rs  lsp_client.rs  mod.rs  python.rs  python_pyrefly.rs  python_rope.rs  rust.rs  typescript.rs
src/logic/: mod.rs  typescript.rs
src/server/: mod.rs
src/validation/: mod.rs
tests/: batch_move.rs  cli.rs  dart_move.rs  go_move.rs  markdown_external_links.rs  markdown_move.rs  python_move.rs  rust_move.rs  typescript_alias_move.rs  typescript_directory_limit.rs  typescript_large_project.rs  typescript_move.rs
tests/common/: mod.rs
(+169 files in other folders)
