[package]
name = "refac_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { path = "Repo/rust-sdk/crates/rmcp", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
schemars = { version = "1.2", features = ["derive"] }
lsp-types = "0.97.0"
url = "2.5.7"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.8"


