[package]
name = "refac"
version = "0.1.0"
edition = "2024"
default-run = "refac"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
schemars = { version = "1.2", features = ["derive"] }
lsp-types = "0.97.0"
url = "2.5.7"
which = "8.0.0"

[dev-dependencies]
tempfile = "3.8"
